Bagunça, REORGANIZAR GERAL!!

--- a/Esclipse/Java/ProjetoAgua-Luz/.project
+++ b/Esclipse/Java/ProjetoAgua-Luz/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>agua-luz-notificacao</name>
+	<name>agua-luz-notificacao-Pessoal</name>
 	<comment></comment>
 	<projects>
 	</projects>
